[package]
name = "dropboxsign-client"
version = "0.1.0"
edition = "2024"
authors = [" <cjcox17@icloud.com>"]
description = "A Rust client library for Dropbox Sign (formally HelloSign)"
homepage = "https://github.com/cjcox17/dropboxsign-client"
repository = "https://github.com/cjcox17/dropboxsign-client"
license = "MIT OR Apache-2.0"
keywords = ["dropbox", "dropboxsign", "esign", "hellosign"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
thiserror = "2.0.16"

[dev-dependencies]
dotenvy = "0.15.7"
